--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bert botz",
+  "name": "Gilbert bot",
   "version": "1.0.0",
   "description": "Harun for whatsapp online with termux",
   "main": "index.js",
