--- a/package.json
+++ b/package.json
@@ -1,58 +1,74 @@
-{
-  "name": "Gilbert bot",
+ {
+  "name": "melcanz-bot",
   "version": "1.0.0",
-  "description": "Harun for whatsapp online with termux",
+  "description": "Harun for WhatsApp online with termux",
+  "depecrated": false,
   "main": "index.js",
   "directories": {
-    "lib": "lib"
-  },
-  "devDependencies": {},
+    "lib": "lib",
+  }, 
+    "devDependencies":{}
   "scripts": {
     "start": "node index",
     "play": "nodemon index"
   },
-  "keywords": [
-    "termux",
+  "keywords":[
+    "termux":,
     "whatsapp",
     "bot",
     "whatsapp",
-    "bot"
-  ],
-  "author": "MhankBarBar",
-  "repository": {
-    "type": "git",
+    "bot",
+    "baileys"
+    ], 
+    "author": "MhankBarBar",
+  "repository":{
+  "type":" git"
     "url": "git+https://github.com/alonecans/wansap-bot-manca.git"
   },
-  "bugs": {
-    "url": "https://github.com/alonecans/wansap-bot-manca/issues"
-  },
-  "homepage": "https://github.com/alonecans/readme.md",
-  "license": "ISC",
-  "dependencies": {
-    "@adiwajshing/baileys": "^3.3.0",
-    "async": "^2.4.1",
-    "axios": "^0.21.0",
-    "cfonts": "^2.9.0",
-    "dotenv": "^8.2.0",
-    "brainly-scraper": "^1.0.3",
-    "mathjs": "^8.1.1",
-    "fs-extra": "^9.0.1",
-    "escape-string-regexp": "^1.0.5",
-    "fake-useragent": "^1.0.1",
-    "fluent-ffmpeg": "^2.1.2",
-    "got": "^11.8.1",
-    "image-to-base64": "^2.1.1",
-    "moment-timezone": "^0.5.32",
-    "multistream": "^2.1.0",
-    "needle": "^2.5.2",
-    "node-fetch": "^2.6.1",
-    "node-gtts": "^2.0.2",
-    "node-tesseract-ocr": "^2.0.0",
-    "performance-now": "^2.1.0",
+  "bugs":{
+    "url":" https://github.com/alonecans/wansap-bot-manca/issues"
+  }, 
+  "homepage":" https://github.com/alonecans/readme.md", 
+  "license":" ISC"
+  "ependencies":{
+    "@adiwajshing/baileys":^3.3.0",
+    "asyncz":" 2.4.1", 
+  }
+  
+    "@adiwajshing/baileys": "github:adiwajshing/baileys",
+    "awesome-phone number": "^2.62.1",
+    "cfonts": "^2.9.3",
+    "chalk": "^4.1.1",
+    "cheerio": "^1.0.0-rc.5",
+    "dotenv":"^8.2.0", 
+    "brainy scapeerr":"^1.0.3"'
+   "math.js":"^8.8.1", 
+   "fs ekstra":"^9.0.1",
+    "express": "^4.17.1",
+    "file-type": "^16.5.2",
+    "form-data": "^4.0.0",
+    "g-i-s": "^2.1.6",
+    "got": "^11.8.2",
+    "human-readable": "^0.2.1",
+    "jsbarcode": "^3.11.4",
+    "jsdom": "^16.6.0",
+    "lodash": "^4.17.21",
+    "lowdb": "^2.1.0",
+    "moment-timezone": "^0.5.33",
+    "mongoose": "^6.0.12",
+    "node-fetch": "^2.6.5",
+    "node-webpmux": "^3.1.0",
+    "qrcode": "^1.4.4",
     "qrcode-terminal": "^0.12.0",
-    "remove.bg": "^1.3.0",
-    "request": "^2.81.0",
-    "spinnies": "^0.5.1",
-    "tiktok-scraper": "^1.4.7"
+    "similarity": "^1.2.1",
+    "socket.io": "^4.1.3",
+    "syntax-error": "^1.4.0",
+    "terminal-image": "^2.0.0",
+    "translate-google-api": "^1.0.4",
+    "url-regex": "^5.0.0",
+    "xml-js": "^1.6.11",
+    "xmldom": "^0.6.0",
+    "yargs": "^17.2.1",
+    "yt-search": "^2.9.0"
   }
 }
