--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 
-  "name": "Bert botz",
+  "name": "Gilbert botz",
 
   "version": "1.0.0",
   "description": "Harun for whatsapp online with termux",
